--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Viagens</string>
+    <string name="conteudo_banner_inicial">Banner Inicial dos Pacotes</string>
+    <string name="especiais">Especiais</string>
+    <string name="pais">Brasil</string>
 </resources>
