--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
     <string name="prec_o_final">Preço final:</string>
     <string name="imagem_string_conteudo_banner_inicial">Imagem @string/conteudo_banner_inicial</string>
+    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvxwyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
+    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para pagamento</string>
+    <string name="valor_da_compra">Valor da compra:</string>
+    <string name="numero_do_cartao">Número do cartão</string>
+    <string name="mes_cartao">MM</string>
+    <string name="ano_cartao">AA</string>
+    <string name="cvc_pagamento">CVC</string>
+    <string name="nome_no_cartao">Nome no cartão</string>
+    <string name="finalizar_compra">FINALIZAR COMPRA</string>
 </resources>
