--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="especiais">Especiais</string>
     <string name="pais">Brasil</string>
     <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
-    <string name="prec_o_final">Preço final:</string>
+    <string name="preco_final">Preço final:</string>
     <string name="imagem_string_conteudo_banner_inicial">Imagem @string/conteudo_banner_inicial</string>
     <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvxwyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
     <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para pagamento</string>
@@ -15,4 +15,8 @@
     <string name="cvc_pagamento">CVC</string>
     <string name="nome_no_cartao">Nome no cartão</string>
     <string name="finalizar_compra">FINALIZAR COMPRA</string>
+    <string name="parabens">Parabéns!</string>
+    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
+    <string name="confirma_o_resumo_da_compra">Confirma o resumo da compra:</string>
+    <string name="resumo_compra_banner_inicial">Resumo compra banner inicial</string>
 </resources>
